# test-spectr

./: .env.dist  .gitignore  README.md  docker-compose.yaml
app/: nginx.conf
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: Dockerfile  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: BaseField.vue  Form.vue
frontend/src/helpers/: api.js
